# bot_text2vc

./: .gitignore  Cargo.toml  README.md
.github/workflow/: deploy.yml
src/: main.rs  queue.rs  readmsg.rs
src/commands/: come.rs  leave.rs  listen.rs  mod.rs  nyan.rs  ping.rs  queue.rs  random.rs  unlisten.rs
src/message/: messagefix.rs  messageregist.rs  mod.rs  readmsg.rs  voiceregist.rs
