[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

# Discord
serenity = "0.11"
songbird = { version = "0.3", default-features = false, features = ["serenity-native"] }