[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.6"

# Discord
serenity = "0.11"
songbird = { version = "0.3.0", features = ["builtin-queue"]}

# serde_json
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
